--- a/index.html
+++ b/index.html
@@ -2,76 +2,93 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>Birthday Experience ✨</title>
+<title>Birthday Surprise ✨</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <style>
-*{
-  margin:0;
-  padding:0;
-  box-sizing:border-box;
-  font-family:'Poppins',system-ui,sans-serif;
-}
-
-html,body{
-  width:100%;
-  height:100%;
-  overflow-x:hidden;
-}
+*{margin:0;padding:0;box-sizing:border-box;font-family:'Poppins',system-ui,sans-serif}
+html,body{width:100%;height:100%;overflow-x:hidden}
 
 /* ===== BACKGROUND ===== */
 body{
   min-height:100svh;
-  background:
-    radial-gradient(circle at 20% 20%,#fde2f3,transparent 45%),
-    radial-gradient(circle at 80% 30%,#e0e7ff,transparent 45%),
-    radial-gradient(circle at 50% 80%,#fef3c7,transparent 45%),
-    linear-gradient(135deg,#fafafa,#fdf2f8);
-  color:#2d2d2d;
+  background:linear-gradient(135deg,#ffe4ec,#e0e7ff,#fff7d6);
+  transition:background .6s ease;
+}
+body.note-mode{
+  background:radial-gradient(circle,#222,#000);
+}
+
+/* ===== STAR ROPE (ONLY PAGE 1) ===== */
+.hanging-decor{
+  position:fixed;
+  top:30px;
+  left:0;
+  width:100%;
+  height:160px;
+  pointer-events:none;
+  z-index:50;
+}
+.rope-line{
+  width:100%;
+  height:4px;
+  background:#6b4f1d;
+}
+.star-string{
+  position:absolute;
+  top:4px;
+  display:flex;
+  flex-direction:column;
+  align-items:center;
+}
+.string{
+  width:2px;
+  height:70px;
+  background:#888;
+}
+.star{
+  width:18px;
+  height:18px;
+  background:radial-gradient(circle,#fff8dc,#facc15);
+  clip-path:polygon(50% 0%,61% 35%,98% 35%,68% 57%,79% 91%,50% 70%,21% 91%,32% 57%,2% 35%,39% 35%);
+  filter:drop-shadow(0 0 10px rgba(255,215,0,.9));
+  animation:twinkle 3s infinite ease-in-out;
+}
+@keyframes twinkle{
+  50%{opacity:.5;transform:scale(.85)}
 }
 
 /* ===== PAGE SYSTEM ===== */
 .page{
   position:absolute;
   inset:0;
+  padding-top:220px;
   display:flex;
   flex-direction:column;
   justify-content:center;
   align-items:center;
   opacity:0;
-  transform:translateY(10px);
   pointer-events:none;
-  transition:opacity .7s ease, transform .7s ease;
-  padding:20px;
+  transition:opacity .6s ease;
 }
 .page.active{
   opacity:1;
-  transform:translateY(0);
   pointer-events:auto;
 }
 
 /* ===== TEXT ===== */
-h1{
-  font-size:2.4rem;
-  color:#4c1d95;
-  text-align:center;
-}
-h2{
-  margin-top:8px;
-  font-size:1.3rem;
-  color:#6d28d9;
-  text-align:center;
-}
+h1{font-size:2.4rem;color:#5b21b6;text-align:center}
+h2{margin-top:8px;font-size:1.3rem;color:#7c3aed;text-align:center}
 
 /* ===== BUTTON ===== */
 .button{
   margin-top:28px;
-  padding:12px 30px;
+  padding:12px 32px;
   border-radius:30px;
-  background:linear-gradient(90deg,#7c3aed,#ec4899);
+  background:#ff4d6d;
   color:#fff;
   cursor:pointer;
-  box-shadow:0 10px 22px rgba(0,0,0,.14);
+  font-weight:600;
 }
 
 /* ===== RIBBON ===== */
@@ -81,160 +98,121 @@ h2{
   display:flex;
   justify-content:center;
   align-items:center;
-  background:linear-gradient(135deg,#fde2f3,#e0e7ff);
-  z-index:30;
+  background:linear-gradient(135deg,#ffd6e0,#cdb4db);
+  z-index:100;
 }
 #ribbon{
-  padding:18px 60px;
-  background:linear-gradient(90deg,#ec4899,#f472b6);
+  padding:20px 70px;
+  background:#ff4d6d;
   color:#fff;
-  border-radius:50px;
+  border-radius:40px;
   font-size:1.3rem;
   cursor:pointer;
-  animation:pulse 2s infinite;
 }
-@keyframes pulse{50%{transform:scale(1.05)}}
-.ribbon-exit{
-  animation:exit .8s forwards ease;
-}
-@keyframes exit{
-  to{opacity:0;transform:scale(1.4)}
-}
-
-/* ===== PAGE 2 FIX ===== */
-#page2{
-  justify-content:flex-start;
-  padding-top:40px;
-  overflow-y:auto;
-}
+.ribbon-exit{animation:fadeZoom .8s forwards}
+@keyframes fadeZoom{to{opacity:0;transform:scale(1.3)}}
 
 /* ===== BOOK ===== */
 .book{
-  width:180px;
-  height:240px;
-  background:linear-gradient(135deg,#fde68a,#f59e0b);
+  width:180px;height:240px;
+  background:linear-gradient(135deg,#ffd166,#fca311);
   border-radius:14px;
-  box-shadow:0 18px 36px rgba(0,0,0,.22);
-  position:relative;
   cursor:pointer;
-  margin-bottom:20px;
-}
-.book::before{
-  content:"";
-  position:absolute;
-  left:0;
-  width:10px;
-  height:100%;
-  background:linear-gradient(#b45309,#92400e);
-  border-radius:14px 0 0 14px;
-}
-.bookCover{
-  position:absolute;
-  inset:0;
   display:flex;
-  flex-direction:column;
   justify-content:center;
   align-items:center;
   font-weight:600;
   color:#78350f;
+  margin-bottom:20px;
 }
-.bookCover span{font-size:2.2rem}
 
-/* ===== LETTER ===== */
+/* ===== NOTE ===== */
 #letter{
-  width:100%;
-  max-width:520px;
-  background:#fffdf8;
-  padding:24px;
-  border-radius:16px;
-  line-height:1.7;
+  max-width:540px;
+  background:linear-gradient(135deg,#fff1c1,#fef3c7);
+  padding:26px;
+  border-radius:18px;
+  line-height:1.8;
   display:none;
-  box-shadow:0 16px 32px rgba(0,0,0,.15);
+  color:#3b2f2f;
 }
 .letterPage{display:none}
 .letterPage.active{display:block}
 
-/* ===== PAGE 3 FIX ===== */
-#page3{
-  justify-content:flex-start;
-  padding-top:40px;
-}
-
 /* ===== BALLOONS ===== */
 #balloons{
   display:flex;
+  gap:20px;
   flex-wrap:wrap;
   justify-content:center;
-  gap:18px;
   margin-top:20px;
-  width:100%;
 }
 .balloon{
-  width:70px;
-  height:90px;
+  width:70px;height:90px;
   border-radius:50% 50% 45% 45%;
   cursor:pointer;
-  animation:float 4.5s infinite ease-in-out;
+  transition:transform .25s ease, opacity .25s ease;
 }
-@keyframes float{50%{transform:translateY(-14px)}}
+.balloon.pop{
+  transform:scale(1.4);
+  opacity:0;
+}
 
 /* ===== QUOTE ===== */
 #quoteBox{
   margin-top:24px;
   background:#fff;
-  padding:20px;
-  border-radius:16px;
+  padding:18px;
+  border-radius:14px;
   max-width:420px;
   display:none;
-  box-shadow:0 16px 30px rgba(0,0,0,.2);
 }
 
 /* ===== CELEBRATION ===== */
-.petal{
-  position:absolute;
-  width:7px;
-  height:7px;
-  border-radius:50%;
-  opacity:.75;
-  animation:fall linear forwards;
-}
-@keyframes fall{
-  from{transform:translateY(-10vh)}
-  to{transform:translateY(110vh)}
-}
-
-/* ===== DESKTOP SIZE ===== */
-@media(min-width:768px){
-  h1{font-size:2.8rem}
-  h2{font-size:1.4rem}
-  .book{width:190px;height:250px}
-  .balloon{width:78px;height:98px}
-}
-
-/* ===== MOBILE VIEW HINT ===== */
-#mobileHint{
+.confetti{
   position:fixed;
-  bottom:20px;
-  left:50%;
-  transform:translateX(-50%);
-  background:rgba(255,255,255,.9);
-  color:#333;
-  padding:10px 18px;
-  border-radius:20px;
-  font-size:.9rem;
-  box-shadow:0 10px 25px rgba(0,0,0,.15);
-  opacity:0;
-  pointer-events:none;
-  transition:opacity .6s ease;
-  z-index:50;
+  width:10px;height:14px;
+  z-index:200;
+  animation:confetti 2s ease-out forwards;
 }
-@media (min-width: 768px){
-  #mobileHint{opacity:1;}
+@keyframes confetti{
+  from{transform:translateY(0)}
+  to{transform:translate(var(--x),var(--y));opacity:0}
+}
+
+/* ===== FLOWER EXPLOSION ===== */
+.flower{
+  position:fixed;
+  width:12px;
+  height:12px;
+  border-radius:50%;
+  z-index:200;
+  animation:flowerBurst 1.2s ease-out forwards;
+}
+@keyframes flowerBurst{
+  from{transform:scale(0)}
+  to{transform:translate(var(--x),var(--y)) scale(1);opacity:0}
 }
 </style>
 </head>
 
 <body>
+
+<!-- STAR ROPE -->
+<div class="hanging-decor" id="decor">
+  <div class="rope-line"></div>
+</div>
+
+<script>
+const decor=document.getElementById('decor');
+for(let i=0;i<9;i++){
+  const s=document.createElement('div');
+  s.className='star-string';
+  s.style.left=(5+i*10)+'%';
+  s.innerHTML='<div class="string"></div><div class="star"></div>';
+  decor.appendChild(s);
+}
+</script>
 
 <!-- RIBBON -->
 <div id="ribbonScreen">
@@ -243,53 +221,43 @@ h2{
 
 <!-- PAGE 1 -->
 <div class="page active" id="page1">
-  <h1>Happy Birthday ✨</h1>
+  <h1>Happy Birthday 🎉</h1>
   <h2>To You, My Friend 🤍</h2>
   <div class="button" onclick="goPage(2)">Read a Note 📖</div>
 </div>
 
 <!-- PAGE 2 -->
 <div class="page" id="page2">
-  <div class="book" onclick="openLetter()">
-    <div class="bookCover"><span>🤍</span>A Note</div>
-  </div>
+  <div class="book" onclick="openLetter()">🤍 A Note</div>
 
   <div id="letter">
+    <!-- NOTE PAGE 1 -->
     <div class="letterPage active" id="l1">
       <b>Happy Birthday to Someone Truly Special 🤍</b><br><br>
 
-      I hope this year wraps you in happiness, strength, and beautiful surprises
-      and countless little moments that make you smile without even realizing.
-      Never stop believing in yourself — you have the power to achieve everything you dream of.<br><br>
+      I hope this year wraps you in happiness, strength, and beautiful surprises and countless little moments that make you smile without even realizing. Never stop believing in yourself — you have the power to achieve everything you dream of.<br><br>
 
-      You’re such a rare mix of kind, caring, sweet, funny, and a little bit crazy 😝
-      and that’s what makes you-YOU.
-      Your presence makes things lighter and happier and I’m genuinely grateful
-      that our paths crossed and that I found such an amazing friend in you.<br><br>
+      You’re such a rare mix of kind, caring, sweet, funny, and a little bit crazy 😝 and that’s what makes you-YOU. Your presence makes things lighter and happier and I’m genuinely grateful that our paths crossed and that I found such an amazing friend in you.<br><br>
 
-      May you always be surrounded by love, good energy,
-      and people who appreciate you the way you deserve.<br><br>
+      May you always be surrounded by love, good energy, and people who appreciate you the way you deserve.<br><br>
 
-      With exams are coming up, but I know you’ll absolutely crush them,
-      show them who’s boss 😎<br>
-      Always rooting for you 😉<br><br>
+      With exams are coming up, but I know you’ll absolutely crush them, show them who’s boss😎<br>
+      Always rooting for you 😉 ✒️<br><br>
 
       <div class="button" onclick="nextLetter()">Next</div>
     </div>
 
+    <!-- NOTE PAGE 2 -->
     <div class="letterPage" id="l2">
       It feels like you were born of the moon,<br>
       As if you’ve come from some distant world.<br>
-      Crossing mountains, passing beyond the skies,<br><br>
-
-      Divine beauty your body is like marble, untouched and out of reach.
-      You toss your hair; you make people a little sick.<br><br>
-
-      You got a sexy figure drenched in sweat while doing yoga.
-      Your lips are as soft as rose petals,
-      and Your blue eyes sparkle with the beauty of Shatsky Lakes.<br><br>
-
-      The gates of heaven are nothing compared to you.<br><br>
+      Crossing mountains, passing beyond the skies,<br>
+      Divine beauty your body is like marble, untouched and out of reach.<br>
+      You toss your hair; you make people a little sick.<br>
+      You got a sexy figure drenched in sweat while doing yoga.<br>
+      Your lips are as soft as rose petals, and<br>
+      Your blue eyes sparkle with the beauty of Shatsky Lakes.<br>
+      The gates of heaven are nothing compared to you. ✒️<br><br>
 
       <div class="button" onclick="goPage(3)">One More Surprise 🎈</div>
     </div>
@@ -297,36 +265,48 @@ h2{
 </div>
 
 <!-- PAGE 3 -->
-<div class="page" id="page3">
+<div class="page" id="page3" style="background:linear-gradient(135deg,#e0f2fe,#fef3c7)">
   <h1>Pop the Balloons 🎈</h1>
   <div id="balloons">
-    <div class="balloon" style="background:#ec4899" data-q="You are far more capable than you think."></div>
-    <div class="balloon" style="background:#8b5cf6" data-q="Your kindness quietly changes lives."></div>
-    <div class="balloon" style="background:#06b6d4" data-q="Some people make life lighter by existing."></div>
-    <div class="balloon" style="background:#22c55e" data-q="Never dim yourself. You were meant to shine."></div>
-    <div class="balloon" style="background:#f59e0b" data-q="The world is better with you in it."></div>
+    <div class="balloon" style="background:#ff4d6d" data-q="You are far more capable than you think."></div>
+    <div class="balloon" style="background:#ffd166" data-q="Your kindness quietly changes lives."></div>
+    <div class="balloon" style="background:#4cc9f0" data-q="Some people make life lighter by existing."></div>
+    <div class="balloon" style="background:#80ed99" data-q="Never dim yourself. You were meant to shine."></div>
+    <div class="balloon" style="background:#cdb4db" data-q="The world is better with you in it."></div>
   </div>
   <div id="quoteBox"></div>
 </div>
 
-<!-- MOBILE HINT -->
-<div id="mobileHint">Best viewed on mobile 📱</div>
-
 <script>
 function openRibbon(){
-  const r=document.getElementById('ribbonScreen');
-  r.classList.add('ribbon-exit');
-  setTimeout(()=>r.remove(),800);
-  celebrate(40);
+  ribbonScreen.classList.add('ribbon-exit');
+  setTimeout(()=>ribbonScreen.remove(),800);
+  celebrate();
+}
+
+function celebrate(){
+  for(let i=0;i<35;i++){
+    const c=document.createElement('div');
+    c.className='confetti';
+    c.style.left='50%';
+    c.style.top='50%';
+    c.style.background=`hsl(${Math.random()*360},90%,60%)`;
+    c.style.setProperty('--x',(Math.random()*400-200)+'px');
+    c.style.setProperty('--y',(Math.random()*-300)+'px');
+    document.body.appendChild(c);
+    setTimeout(()=>c.remove(),2000);
+  }
 }
 
 function goPage(n){
   document.querySelectorAll('.page').forEach(p=>p.classList.remove('active'));
   document.getElementById('page'+n).classList.add('active');
+  decor.style.display = (n===1?'block':'none');
 }
 
 function openLetter(){
-  document.getElementById('letter').style.display='block';
+  letter.style.display='block';
+  document.body.classList.add('note-mode');
 }
 
 function nextLetter(){
@@ -334,34 +314,29 @@ function nextLetter(){
   l2.classList.add('active');
 }
 
-let popped=0;
 document.querySelectorAll('.balloon').forEach(b=>{
-  b.onclick=()=>{
+  b.onclick=e=>{
+    if(b.classList.contains('pop'))return;
+    b.classList.add('pop');
+    explodeFlowers(e.clientX,e.clientY);
     quoteBox.style.display='block';
     quoteBox.innerText=b.dataset.q;
-    b.style.visibility='hidden';
-    popped++;
-    if(popped===5) celebrate(70);
-  }
+  };
 });
 
-function celebrate(count){
-  for(let i=0;i<count;i++){
-    let p=document.createElement('div');
-    p.className='petal';
-    p.style.left=Math.random()*100+'vw';
-    p.style.background=`hsl(${Math.random()*360},60%,75%)`;
-    p.style.animationDuration=4+Math.random()*3+'s';
-    document.body.appendChild(p);
-    setTimeout(()=>p.remove(),7000);
+function explodeFlowers(x,y){
+  for(let i=0;i<16;i++){
+    const f=document.createElement('div');
+    f.className='flower';
+    f.style.left=x+'px';
+    f.style.top=y+'px';
+    f.style.background=`hsl(${Math.random()*360},80%,70%)`;
+    f.style.setProperty('--x',(Math.random()*160-80)+'px');
+    f.style.setProperty('--y',(Math.random()*160-80)+'px');
+    document.body.appendChild(f);
+    setTimeout(()=>f.remove(),1200);
   }
 }
-
-// auto-hide mobile hint
-setTimeout(()=>{
-  const h=document.getElementById('mobileHint');
-  if(h) h.style.opacity='0';
-},4000);
 </script>
 
 </body>
